# Chatty

./: .gitignore  CMakeLists.txt  Chatty.project  README.md  command.cpp  command.h  commands.cpp  commands.h  database.h  main.cpp  mime.cpp  mime.h  mongo.cpp  mongo.h  xmpp.cpp  xmpp.h
cmake-extra/: FindLibStrophe.cmake
